apps/media/qbittorrent-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-egress
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: ${qbittorrent_vpn_endpoint_cidr}
      ports:
        - protocol: UDP
          port: ${qbittorrent_vpn_endpoint_port:=51820}
    - to:
        - ipBlock:
            cidr: ${k8s_pod_cidr}
    - to:
        - ipBlock:
            cidr: ${k8s_service_cidr}
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
